Tue Mar 13 15:13:48 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/Logging_Strategy_Test.cpp: Fixed Unicode related bugs.

Tue Mar 13 10:04:06 2001  Carlos O'Ryan  <coryan@uci.edu>

        * performance-tests/TCP/run_test.pl:
          Fixed the path to the $ACE_ROOT/bin directory, now the script
          runs again.

Tue Mar 13 06:04:03 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Service_Manager.cpp (list_services): Add an indication of whether
          a service is active or paused.  Thanks to Mike Curtis for this
          improvement.

        * ace/Reactor.h: Clarified that the remove_handler (handle, mask)
          method also removes the event handle.  Thanks to Pierre Fayolle
          <fayolle@enseirb.fr> for reporting this.

        * tests/Logging_Strategy_Test.cpp (get_statistic): Replace struct stat
          with ACE_stat.  Thanks to Johnny Willemsen for reporting this.

Tue Mar 13 00:35:35 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/Select_Reactor_T.i (deactivated): Reverted this change
          regarding Select_Reactor_T::deactivated():

          Thu Feb 22 12:28:15 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

          Though my change improved correctness of access and change to
          the <deactivated_> variable, it had a negative consequence: the
          event loop calls Select_Reactor_T::deactivated() before calling
          Select_Reactor_T::handle_events() to make sure that the reactor
          is not closed yet.  Unfortunately, if
          Select_Reactor_T::deactivated() has a guard, it will send a null
          event waking up the current leader and thus lead to unnecessary
          thrashing.  For now, I have removed the guard from the
          Select_Reactor_T::deactivated() methods.  We should revisit this
          issue some time again.  This fixes bug 816.

Mon Mar 12 16:30:32 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
